fix: update background color in index.css for improved contrast

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(0, 0, 0, 0.87);
-  background-color: #fffcfc;
+  background-color: rgb(78, 73, 73);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
